<resources>
    <string name="app_name" translatable="false">Wrenchy</string>
    <string name="title_activity_main_">Main_Activity</string>
    <string name="Gallery">Gallery</string>
    <string name="Slideshow">Slideshow</string>
    <string name="Tools">Tools</string>
    <string name="title_activity_calendar_scroll">CalendarScrollActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_history">History</string>

    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="username">Name</string>
    <string name="phone">Phone number</string>

    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="register_here"><u>Don\'t have an account? Register here!</u></string>
    <string name="remember_me">Remember me</string>
    <string name="hello">Hello, %1$s!</string>

    <string name="email_here">Email here</string>
    <string name="send">send</string>
    <string name="forgot_pass">Forgot your password?</string>
    <string name="fpw_instructions">We\'ll send you instructions to reset your password and get you back on the track</string>

    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_newp">Confirm password</string>
    <string name="change_password">Change password</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="images">Images:</string>
    <string name="price">Sum: </string>
    <string name="description">Description: </string>
    <string name="take_job">Take job</string>

    <string name="offer_details">Details:</string>
    <string name="title_activity_history_fragment">HistoryFragment</string>
    <string name="action_settings">Settings</string>
    <string name="tab_text_1">Joined Offers</string>
    <string name="tab_text_2">My Offers</string>
    <string name="worker_review">Worker reviews</string>
    <string name="employer_review">Employer reviews</string>

    <string name="no_reviews">No reviews available!</string>

</resources>
