<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginPanel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:clickable="false"
    tools:context="com.example.xghos.Wrenchy.LoginFragment">

    <EditText
        android:id="@+id/ETEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColor="#ffffff"
        android:textColorHint="#f1eded"
        app:layout_constraintBottom_toTopOf="@+id/ETPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ETPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHint="#f1eded"
        app:layout_constraintBottom_toTopOf="@+id/CRemember"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BLogin"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:background="@drawable/rounded_corner_button_res"
        android:text="@string/login"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TVRegHere"
        android:layout_width="247dp"
        android:layout_height="20dp"
        android:layout_marginBottom="15dp"
        android:linksClickable="true"
        android:text="@string/register_here"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/CRemember"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="48dp"
        android:buttonTint="@android:color/white"
        android:text="@string/remember_me"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/BLogin"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="50dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePic"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginEnd="176dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="40dp"
        android:clickable="false"
        android:src="@drawable/ic_wrenchy_144dp"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:layout_marginEnd="48dp"
        android:text="@string/forgot_pass"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/BLogin"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
