<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPW"
    android:background="@drawable/bg"
    android:alpha="0.78">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginEnd="176dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="40dp"
        android:clickable="false"
        android:src="@drawable/lock"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_here"
        android:layout_width="256dp"
        android:layout_height="60dp"
        android:layout_marginTop="230dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:ems="10"
        android:hint="@string/email_here"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <Button
        android:id="@+id/BSend"
        android:layout_width="99dp"
        android:layout_height="39dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_corner_button_res"
        android:text="@string/send"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:text="@string/fpw_instructions"
        android:textAlignment="center"
        android:textColor="#9fb8c6"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_pass"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

</android.support.constraint.ConstraintLayout>