<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homebg"
    tools:context="com.example.xghos.Wrenchy.ChangePW">

    <EditText
        android:id="@+id/ETOldPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="210dp"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:ems="10"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHint="#f1eded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ETNpass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHint="#f1eded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETOldPass" />

    <EditText
        android:id="@+id/ETCpass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:ems="10"
        android:hint="@string/confirm_newp"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHint="#f1eded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETNpass" />

    <Button
        android:id="@+id/BChangePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_corner_button_res"
        android:text="@string/change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETCpass" />
</android.support.constraint.ConstraintLayout>
