<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/RegisterPanel"
    android:background="@drawable/bg">

    <EditText
        android:id="@+id/ETEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColor="#ffffff"
        android:textColorHint="#f1eded"
        app:layout_constraintBottom_toTopOf="@+id/ETPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ETPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHint="#f1eded"
        app:layout_constraintBottom_toTopOf="@+id/ETName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ETName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/ic_person_outline_black_24dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#ffffff"
        android:textColorHint="#f1eded"
        app:layout_constraintBottom_toTopOf="@+id/ETPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BRegister"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/rounded_corner_button_res"
        android:text="@string/register"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ETPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/ic_phone_black_24dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColor="#ffffff"
        android:textColorHint="#f1eded"
        app:layout_constraintBottom_toTopOf="@+id/BRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="50dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/IVProfilePic"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginEnd="176dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/add_profile_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>


