<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OfferFragment">

    <TextView
        android:id="@+id/offerTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text=""
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/underline1"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offerTitle">

    </FrameLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/description"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/underline1" />

    <TextView
        android:id="@+id/offerDetails"
        android:layout_width="0dp"
        android:layout_height="122dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/textview_border"
        android:paddingBottom="10dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:scrollbars="vertical"
        android:text=""
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/offerLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:text=""
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offerDetails" />

    <FrameLayout
        android:id="@+id/underline2"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offerLocation">

    </FrameLayout>

    <TextView
        android:id="@+id/expireDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:text=""
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/underline2" />

    <FrameLayout
        android:id="@+id/underline3"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expireDate">

    </FrameLayout>

    <TextView
        android:id="@+id/imagesText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/images"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/underline3" />

    <TextView
        android:id="@+id/priceText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/price"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagesText" />

    <TextView
        android:id="@+id/offerer"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="65dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text=""
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:background="@drawable/instalator_drawable_todo__"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagesText" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text=""
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:paddingEnd="0dp"
        android:paddingStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/priceText"
        app:layout_constraintTop_toBottomOf="@+id/imagesText" />

    <Button
        android:id="@+id/takeJob"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/down_button"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/take_job"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>